--- a/index.html
+++ b/index.html
@@ -12,24 +12,42 @@
 </head>
 <body>
     
-    <div class="header">
+    <img class="foto" src="saya.jpeg"
+        width="250"
+        height="250">
+    </br>
+
+    <div class="pisang">
+
     <img class="pisang3"  src="pisang.gif"
-         width="75"
-         height="75">
-
-         <img class="foto" src="saya.jpeg"
-         width="300"
-         height="300">
-
-    
+         width="50"
+         height="50">
 
 
     <img class="pisang2" src="pisang.gif"
-         width="75"
-         height="75">
+         width="50"
+         height="50">
 
+    <img src="pisang.gif"
+         width="50"
+         height="50">
+
+         <img src="pisang.gif"
+         width="50"
+         height="50">
+
+         <img src="pisang.gif"
+         width="50"
+         height="50">
+
+         <img src="pisang.gif"
+         width="50"
+         height="50">
+
+         <img src="pisang.gif"
+         width="50"
+         height="50">
     </div>
-
 </br>
 
     <p class="perkenalan">
