--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <img class="foto" src="saya.jpeg"
+        <img class="foto" src="saya.jpeg"
         width="250"
         height="250">
     </br>
@@ -48,6 +48,7 @@
          width="50"
          height="50">
     </div>
+
 </br>
 
     <p class="perkenalan">
@@ -65,6 +66,7 @@ Tanggerang, 08 November 2005
 </br>
 abimanyugaluhananta@smkwikrama.sch.id
 </div>
+</br>
 
 <div class="pendidikan">
 <h4>PENDIDIKAN</h4>
@@ -99,10 +101,10 @@ abimanyugaluhananta@smkwikrama.sch.id
 <div class="pengalaman">
 <h4>PENGALAMAN ORGANISASI</h4>
 <ol class="org">
-    <li>Anggota MPK SMP Negeri 1 Cigombong 2018 - 2019</li>
+    <li class="mpk">Anggota MPK SMP Negeri 1 Cigombong 2018 - 2019</li>
 </ol>
 </div>
-
+</br>
 <div class="inspirasi">
 <h4>INSPIRASI</h4>
 <ul>
