medsos changed to linktree

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 </br>
 Tanggerang, 08 November 2005
 </br>
-<a target="_blank" href="https://www.instagram.com/agata.8115/">Instagram</a>
-</br>
-<a target="_blank" href="https://twitter.com/AdalahAgata">Twitter</a>
-</br>
-<a target="_blank" href="https://www.facebook.com/abim.manyu.526/">Facebook</a>
+<div class="medsos">
+<a target="_blank" href="https://linktr.ee/agataananta">
+    <button>Media Sosial</button>
+</a>
+</div>
 </br>
 abimanyugaluhananta@smkwikrama.sch.id
 </div>
@@ -120,3 +120,4 @@ abimanyugaluhananta@smkwikrama.sch.id
 
 </body>
 </html>
+
