update nama sekolah

--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@ abimanyugaluhananta@smkwikrama.sch.id
     </thead>
     <tbody>
         <tr>
+            <td> SMK Negeri 4 Kuningan</td>
+            <td>2022 - Sekarang</td>
+        </tr>
+        <tr>
             <td>SMK Wikrama Bogor</td>
-            <td>2021 - Sekarang</td>
+            <td>2021 - 2022</td>
         </tr>
         <tr>
             <td>SMP Negeri 1 Cigombong </td>
@@ -104,7 +108,7 @@ abimanyugaluhananta@smkwikrama.sch.id
 <div class="inspirasi">
 <h4>INSPIRASI</h4>
 <ul>
-    <li class="spo">Spotify</br>Aplikasi mendengarkan musik terbaik dengan fitur dan koleksi lagu terlengkap.</li>
+    <li class="spo"><a target="_blank" href="spotify.com">Spotify/a></br>Aplikasi mendengarkan musik terbaik dengan fitur dan koleksi lagu terlengkap.</li>
     <li class="yt">YouTube</br>Web dan aplikasi penyedia video online terbesar dan terbaik di dunia, selain menonton video, di YouTube juga dapat mendengarkan musik.</li>
     <li class="dc">Discord </br>Web dan aplikasi untuk berkomunikasi dengan sesama pengguna di manca negara dengan banyak fitur yang dimiliki didalamnya.</li>
 </ul>
@@ -120,4 +124,3 @@ abimanyugaluhananta@smkwikrama.sch.id
 
 </body>
 </html>
-
